Added try-catch in all employee classes

--- a/8PRO128-TP4/8PRO128-TP4.vcxproj
+++ b/8PRO128-TP4/8PRO128-TP4.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="employ2.h" />
     <ClInclude Include="Figure.h" />
     <ClInclude Include="hourly1.h" />
+    <ClInclude Include="LazyExceptionHandler.h" />
     <ClInclude Include="piece1.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Rectangle.h" />
