--- a/8PRO128-TP4/8PRO128-TP4.vcxproj.filters
+++ b/8PRO128-TP4/8PRO128-TP4.vcxproj.filters
@@ -127,5 +127,8 @@
     <ClInclude Include="Point.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LazyExceptionHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
