--- a/8PRO128-TP4/8PRO128-TP4.vcxproj
+++ b/8PRO128-TP4/8PRO128-TP4.vcxproj
@@ -125,10 +125,13 @@
   <ItemGroup>
     <ClCompile Include="8PRO128-TP4.cpp" />
     <ClCompile Include="boss1.cpp" />
+    <ClCompile Include="Camion.cpp" />
     <ClCompile Include="commis1.cpp" />
     <ClCompile Include="Date.cpp" />
     <ClCompile Include="employ2.cpp" />
+    <ClCompile Include="Entreprise.cpp" />
     <ClCompile Include="hourly1.cpp" />
+    <ClCompile Include="Moteur.cpp" />
     <ClCompile Include="piece1.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -136,11 +139,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="boss1.h" />
+    <ClInclude Include="Camion.h" />
     <ClInclude Include="commis1.h" />
     <ClInclude Include="Date.h" />
     <ClInclude Include="employ2.h" />
+    <ClInclude Include="Entreprise.h" />
     <ClInclude Include="hourly1.h" />
     <ClInclude Include="LazyExceptionHandler.h" />
+    <ClInclude Include="Moteur.h" />
     <ClInclude Include="piece1.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
